# transform_duck

./: .gitignore  README.md  dashboard.py  print.py  pyproject.toml  read_csv_selecting.py  start.py  start_local.py
.github/workflows/: main.yml
app/: contract.py  contract_pandera.py  dash.py  database.py  db_creator.py  db_tool.py  db_tools.py  db_transform.py  extract_from_s3.py  infer.py  schema.py  testee.py  validator.py  validator_pandera.py
frontend/: client_s3.py  dashboard.py  dashboard_s3.py
infered_schema/: schema_inferred.py
notebooks/: explorer_notebook.ipynb
schema/: schema_inferred.py
tests/: test.py  test_duckdb.py  test_duckdb_transform.py
